chore: ignore CI on CHANGELOG.md changes (#15392)
This doesn't happen often, but I thought I might as well add it while I
still remember

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
       - '.github/FUNDING.yml'
       - '.github/PULL_REQUEST_TEMPLATE.md'
       - 'documentation/**'
+      - 'packages/*/CHANGELOG*.md'
       - 'AGENTS.md'
       - 'CLAUDE.md'
       - 'CONTRIBUTING.md'
