docs: clarify functionality of `$env/*` variables (#15078)
I spent a lot of time trying to understand the `$env/* variables and how
they behave, the docs didn't really seem very fleshed out and I was
confused. I wrote up a bunch of demo code to make sure I really
understood the behaviour, and then realized that a little love in the
docs would probably be appreciated.

All sample code has been run locally and validated as correct as of
`svelte@5.45.6` (using the `npx sv create` to make a minimal app).
Anything that required validation between dev and prod I ran `npm run
build`, editing the `.env` file as necessary, and then `npm run preview`
to run.

## The overall idea

Here's how I broke it down conceptually:

| | Runtime | Buildtime |
|-|-|-|
| Private |
[`$env/dynamic/private`](https://svelte.dev/docs/kit/$env-dynamic-private)
|
[`$env/static/private`](https://svelte.dev/docs/kit/$env-static-private)
|
| Public |
[`$env/dynamic/public`](https://svelte.dev/docs/kit/$env-dynamic-public)
| [`$env/static/public`](https://svelte.dev/docs/kit/$env-static-public)
|

Private versus public:
- Whether or not it can be imported into client-side code.
- Filtering variables based on the `publicPrefix`/`privatePrefix`.

Runtime versus buildtime:
- Whether or not values change based on platform specifics.
- Whether variables make their way into bundled code.

---

### Please don't delete this checklist! Before submitting the PR, please
make sure you do the following:
- ~~[ ] It's really useful if your PR references an issue where it is
discussed ahead of time. In many cases, features are absent for a
reason. For large changes, please create an RFC:
https://github.com/sveltejs/rfcs~~
  - Could not find an open issue about this, 
- [x] This message body should clearly illustrate what problems it
solves.
- ~~[ ] Ideally, include a test that fails without this PR but passes
with it.~~
  - This PR is documentation only.

### Tests
- ~~[ ] Run the tests with `pnpm test` and lint the 

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
       - '.github/PULL_REQUEST_TEMPLATE.md'
       - 'documentation/**'
       - 'packages/*/CHANGELOG*.md'
+      - 'packages/kit/src/types/synthetic/**'
       - 'AGENTS.md'
       - 'CLAUDE.md'
       - 'CONTRIBUTING.md'
